# RBE-500-group-assignment

./: CMakeLists.txt  README.md  forward_kinematics.cpp  package.xml
config/: config.yaml
group/: CMakeLists.txt  README.md  package.xml
group/launch/: rrbot_world.launch  vb_publish_joint_pose_and_vel.launch
group/rrbot_control/: package.xml
group/rrbot_control/config/: rrbot_control.yaml
group/scripts/: ik_server.py  inverse_kinematics_server.py  velocity_fk.py
group/urdf/: rrbot.xacro  vbmbot.xacro
launch/: vb_publish_joint_pose_and_vel.launch
rrbot_control/launch/: rrbot_control.launch
scripts/: add_two_ints_client.py  add_two_ints_server.py  ik_server.py  inverse_kinematics_client.py  inverse_kinematics_server.py
src/: listener.cpp
srv/: inverse_kinematics_.srv
urdf/: rrbot.gazebo  rrbot.xacro  rrbot.xml  vbmbot.gazebo
